feat: add edit user, swagger, and token in update user
