# src/routers/userRouters.js
@@ -6,4 +6,5 @@ routers.get('/', userController.getAllUsers)
 routers.post('/register', userController.register)
 routers.post('/login', userController.login)
 routers.put('/:id', userController.updateDataUsers)
+routers.get('/:id', userController.getUserById)
 module.exports = routers
