# src/swagger/swagger.json
@@ -104,7 +104,7 @@
     }
   },
   "paths": {
-    "/api/v1/users": {
+    "/api/v1/user": {
       "get": {
         "tags": [
           "users"
@@ -129,7 +129,7 @@
         }
       }
     },
-    "/api/v1/users/{id}": {
+    "/api/v1/user/{id}": {
       "get": {
         "tags": [
           "users"
@@ -161,6 +161,67 @@
             }
           }
         }
+      }
+    },
+    "/api/v1/user/{idUser}": {
+      "put": {
+        "tags": [
+          "users"
+        ],
+        "summary": "Update user by ID",
+        "description": "Update user by ID",
+        "operationId": "updateUserById",
+        "parameters": [
+          {
+            "name": "idUser",
+            "in": "path",
+            "description": "ID of user to update",
+            "required": true,
+            "schema": {
+              "type": "integer",
+              "format": "int64"
+            }
+          }
+        ],
+        "requestBody": {
+          "content": {
+            "multipart/form-data": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "name": {
+                    "type": "string"
+                  },
+                  "username": {
+                    "type": "string"
+                  },
+                  "image": {
+                    "type": "string",
+                    "format": "binary"
+                  }
+                }
+              }
+            }
+          },
+          "description": "User object that needs to be added"
+        },
+        "responses": {
+          "200": {
+            "description": "Successful operation",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/User"
+                }
+              }
+            }
+          }
+        }, 
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ]
       }
     },
     "/api/v1/user/login": {
